# xtract

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-APACHE  README.md  build.rs  dist-workspace.toml
.github/workflows/: build-setup.yml  release.yml  test.yml
js/: bundle.js  entry.js  package-lock.json  package.json
samples/ca460/: Makefile  form460.md  scratch.ipynb
samples/ca700/: Makefile  form700.md
samples/whittier-damage-claims/: README.md  scratch.ipynb  whittier-damage-claim.md
src/: cli.rs  js_runner.rs  main.rs  markdown.rs  pages.rs  progress.rs  sqlite.rs
src/commands/: check.rs  extract.rs  mod.rs  schema.rs
