[package]
name = "xtract"
version = "0.0.1"
edition = "2024"
description = "Extract structured data from PDFs using LLMs and schemas"
license = "MIT OR Apache-2.0"
repository = "https://github.com/asg017/xtract"

[dependencies]
rquickjs = { version = "0.11", features = ["bindgen"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "3", features = ["json"] }
base64 = "0.22"
pdf-lib-rs = "0.0.1"
flate2 = "1"
png = "0.17"
tempfile = "3"
markdown = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
serde_yaml = "0.9"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
indicatif = "0.17"
sha2 = "0.10"
console = "0.15"
arboard = "3.6.1"
